# iam

./: .env  .env.example  .gitignore  generate_keys.py  manage.py  pyproject.toml
access_control/departments/: __init__.py  departments.py  registry.py  schema.py
access_control/policies/: __init__.py  global_policies.py  iam.py  inventory.py  registry.py  schema.py
access_control/roles/: __init__.py  global_roles.py  iam.py  inventory.py  registry.py  schema.py
access_control/services/: __init__.py  helpers.py  iam.py  inventory.py  registry.py  schema.py
apps/access/: apps.py
apps/authn/: apps.py  authentication.py  urls.py
apps/authz/: apps.py  permissions.py  urls.py
apps/department/: apps.py
apps/identity/: apps.py  managers.py  urls.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py
documentation/: IAM-Build.md  IAM-JWT-settings.md  IAM-Theory.md  IAM-authentication.md  IAM-checking_user.md  IAM-generate-keys.md  IAM-postgre.md  IAM-seeder.md  IAM-services-authentication.md  IAM-setup.md  IAM-steps.md  IAM-structure.md  IAM-testing.md  IAM-update_user.md  IAM.check-jwt.md  permissions_structure.md  strict.md
documentation/auth/: authenticate.py  jwks.py  models.py  permissions.py  verify.py
documentation/frontend/: auth.md  identity.md  visibility.md
documentation/gpt/: action-flow.md  authz-flow.md  enhancements.md  files.md  gpt.md  performance-optimization.md  refactoring.md  resilience.md
documentation/me/: iam-perms.md  me-jwt.md  me.md  permission.md  refactoring.md
keys/: private.pem  public.pem
(+108 files in other folders)
